--- a/HTML Practise/FEWD/firstpage.html
+++ b/HTML Practise/FEWD/firstpage.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>My First Page</title>
-	</head>
-	<body>
-		<header>
-			<nav>
-				<ul>
-					<li>Menu</li>
-					<li>Contact Us</li>
-					<li>About</li>
-				</ul>
-			</nav>
-		</header>
-		<h1>Hi there</h1>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Gerard</title>
+</head>
+
+<body>
+	<header>
+		Gerard Marais
+	</header>
+	<span>
+		<a href="#">One</a>
+		<a href="#">Two</a>
+		<a href="#">Three</a>
+		<a href="#">Your choice</a>
+	</span>
+	<div>
+		<h2>Favourite Foods</h2>
+		<nav>
+			<ul>
+				<li>Pizza</li>
+				<li>Pasta</li>
+				<li>Steak</li>
+			</ul>
+		</nav>
+	</div>
+	<section>
+		<h2>Achievements</h2>
+		<p>Progress in this course<progress value="100" >(100%)</progress></p>
+
+	</section>
+</body>
+
 </html>
