--- a/HTML Practise/FEWD/firstpage.html
+++ b/HTML Practise/FEWD/firstpage.html
@@ -28,7 +28,7 @@
 	</div>
 	<section>
 		<h2>Achievements</h2>
-		<p>Progress in this course<progress value="100" >(100%)</progress></p>
+		<p>Progress in this course<progress value="100" min="0" max="100">(100%)</progress></p>
 
 	</section>
 </body>
