--- a/HTML Practise/FEWD/firstpage.html
+++ b/HTML Practise/FEWD/firstpage.html
@@ -30,8 +30,11 @@
 		<h2>Achievements</h2>
 		<p>Progress in this course(100%)<progress value="100" min="0" max="100"></progress></p>
 		<p>Progress in the Specialization capstone<progress value="40" min="0" max="100"></progress></p>
-		<p>Progress in lifa goals<progress value="20" min="0" max="100"></progress></p>
-
+		<p>Progress in life goals<progress value="20" min="0" max="100"></progress></p>
+	</section>
+	<section>
+		<h2>More About Me</h2>
+		<details>My Childhood</details>
 	</section>
 </body>
 
