--- a/HTML Practise/FEWD/firstpage.html
+++ b/HTML Practise/FEWD/firstpage.html
@@ -34,7 +34,10 @@
 	</section>
 	<section>
 		<h2>More About Me</h2>
-		<details>My Childhood</details>
+		<details>
+			<caption>My Childhood</caption>
+			I grew up in a small place called home
+		</details>
 	</section>
 </body>
 
