--- a/HTML Practise/FEWD/firstpage.html
+++ b/HTML Practise/FEWD/firstpage.html
@@ -34,8 +34,7 @@
 	</section>
 	<section>
 		<h2>More About Me</h2>
-		<details>
-			<caption>My Childhood</caption>
+		<details caption="My Childhood">
 			I grew up in a small place called home
 		</details>
 	</section>
