--- a/HTML Practise/FEWD/firstpage.html
+++ b/HTML Practise/FEWD/firstpage.html
@@ -34,7 +34,8 @@
 	</section>
 	<section>
 		<h2>More About Me</h2>
-		<details caption="My Childhood">
+		<details>
+			<summary>My Childhood</summary>
 			I grew up in a small place called home
 		</details>
 	</section>
