--- a/HTML Practise/FEWD/firstpage.html
+++ b/HTML Practise/FEWD/firstpage.html
@@ -28,7 +28,7 @@
 	</div>
 	<section>
 		<h2>Achievements</h2>
-		<p>Progress in this course(100%)<progress value="100" min="0" max="100"></progress></p>
+		<p>Progress in this course(100%)<progress value="100" min="0" max="100">100%</progress></p>
 		<p>Progress in the Specialization capstone<progress value="40" min="0" max="100"></progress></p>
 		<p>Progress in life goals<progress value="20" min="0" max="100"></progress></p>
 	</section>
@@ -39,7 +39,7 @@
 			I grew up in a small place called home
 		</details>
 	</section>
-	<img styles="float:left" height="200px" src="https://images.unsplash.com/photo-1543285198-3af15c4592ce?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1974&q=80"
+	<img height="200px" src="https://images.unsplash.com/photo-1543285198-3af15c4592ce?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1974&q=80"
 		alt="generic image or coloured code">
 	<footer>This page was created by Gerard & Colleen van Lent. To learn more about web design visit <a
 			href="https://www.coursera.org/learn/web-development">Intro to web design</a></footer>
